# GANZoo

./: .gitignore  Training.py  TrainingLoops.py
cpp/: README.md  TF_INSTALL_GUIDE.md  WORKSPACE.patch  def_file_filter.patch
cpp/train/: CMakeLists.txt  README.md
cpp/train/lib/: CMakeLists.txt
cpp/train/src/: CMakeLists.txt  DCGAN.cpp  DCGAN.h  Dataloader.h  dataloader.cpp  inference_easy.cpp  json.cpp  json.h  loaders.cpp  loaders.h  param_struct.h  train.cpp  utils.cpp  utils.h
cpp/train/tests/: CMakeLists.txt  catch.cpp  catch.h  test_DCGAN.cpp  test_dataloader.cpp  test_loaders.cpp
networks/: Blocks.py  DCGAN.py  GANWrapper.py  Layers.py  Model.py  Networks.py
python/: TrainingLoops.py
python/gan_zoo/: exampleDCGAN.json  exampleProgGAN.json  exampleStyleGAN.json  training.py  training_loops.py
python/gan_zoo/networks/: DCGAN.py  ProgGAN.py  StyleGAN.py  blocks.py  model.py  networks.py
python/gan_zoo/networks/blocks/: progganblocks.py  styleganblocks.py
python/gan_zoo/networks/dcgan/: dcgan.py  layers.py
python/gan_zoo/networks/progressivegan/: ProgGAN.py  blocks.py  layers.py  proggan.py
python/gan_zoo/networks/sharedarchitecture/: progressive.py  progressiveblocks.py
python/gan_zoo/networks/stylegan/: StyleGAN.py  blocks.py  layers.py  stylegan.py
python/gan_zoo/utils/: dataloaders.py  losses.py
python/networks/: Layers.py
training/: GAN.py  Networks.py  Pix2PixNetworks.py  Training.py  training_loops.py
utils/: DataLoaders.py  Losses.py  TrainFuncs.py  VolSplit.py
